--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nodemon": "^2.0.2",
     "pug": "^2.0.3",
     "serve-favicon": "~2.5.0"
+  },
+  "engines": {
+    "node": "14.15.0"
   }
 }
